fix: set a darker colour for border of card-bordered
card-bordered uses base-200 for the card border, which was set to a colour that was too light to be seen against the white background. set base-200 to a darker colour, and also round the borders of card-bordered.

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -156,6 +156,9 @@
     width: 230px;
     position: relative;
   }
+  .card-bordered {
+    border-radius: 15px;
+  }
 }
 
 @tailwind components;
